--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -16,6 +16,8 @@ jobs:
     container:
       image: 'devkitpro/devkita64'
     steps:
+      - name: Install git
+        run: sudo apt update && sudo apt install -y git
       - name: Checkout code
         uses: actions/checkout@v2
         with:
