--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install software-properties-common dirmngr -y
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys A1715D88E1DF1F24
           sudo add-apt-repository ppa:git-core/ppa -y
           sudo apt update
           sudo apt install git -y
