Cherrypick from gh-actions-switch

--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - master
+      - feature/gh-actions-switch-cache
     tags:
       - '*'
   pull_request: {}
@@ -15,21 +16,27 @@ jobs:
     container:
       image: 'devkitpro/devkita64'
     steps:
+      - name: Install git
+        run: |
+          echo "deb http://ftp.debian.org/debian stretch-backports main" | sudo tee /etc/apt/sources.list.d/stretch-backports.list
+          sudo apt update
+          sudo apt install -t stretch-backports git -y
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 1
+          # We need 0 so we get all commits for mtime!
+          fetch-depth: 0
           path: "./stk-code"
       - name: Checkout OpenAL
         uses: actions/checkout@v2
         with:
-          fetch-depth: 1
+          fetch-depth: 0
           path: "./stk-code/lib/openal"
           repository: "kcat/openal-soft"
       - name: Checkout Harfbuzz
         uses: actions/checkout@v2
         with:
-          fetch-depth: 1
+          fetch-depth: 0
           path: "./stk-code/lib/harfbuzz"
           repository: "harfbuzz/harfbuzz"
       - name: Grab assets
@@ -39,6 +46,16 @@ jobs:
           wget -q https://github.com/supertuxkart/stk-assets-mobile/releases/download/git/stk-assets-full.zip
           unzip -q stk-assets-full.zip -d stk-assets
           rm stk-assets-full.zip
+      - name: Restore modified date
+        run: |
+          sudo apt install -y git-restore-mtime
+          cd stk-code
+          git restore-mtime .
+          cd lib/openal
+          git restore-mtime .
+          cd ../../lib/harfbuzz
+          git restore-mtime .
+          cd ../../..
 
       # Env setup!
       - name: Configure packaging name for git master branch
@@ -78,6 +95,9 @@ jobs:
             stk-code/cmake_build
             stk-code/lib/openal/cmake_build
             stk-code/lib/harfbuzz/cmake_build
+            !stk-code/cmake_build/install
+            !stk-code/cmake_build/bin/*.zip
+            !stk-code/cmake_build/sdcard
           # Make sure PRs can't overwrite!
           key: ${{ github.ref }}-switch-cmake-0
 
