--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -1,5 +1,8 @@
 include_directories("${PROJECT_SOURCE_DIR}/lib/graphics_engine/include")
+include_directories("${PROJECT_SOURCE_DIR}/lib/irrlicht/include")
 add_library(graphics_engine STATIC
     src/gl.c
     src/vulkan.c
+    src/ge_main.cpp
+    src/ge_texture.cpp
 )
