--- a/lib/irrlicht/CMakeLists.txt
+++ b/lib/irrlicht/CMakeLists.txt
@@ -187,6 +187,19 @@ source/Irrlicht/Irrlicht.cpp
 source/Irrlicht/irrXML.cpp
 source/Irrlicht/os.cpp
 source/Irrlicht/COpenGLNormalMapRenderer.cpp
+source/Irrlicht/CD3D9Driver.cpp
+source/Irrlicht/CD3D9Driver.h
+source/Irrlicht/CD3D9HLSLMaterialRenderer.cpp
+source/Irrlicht/CD3D9HLSLMaterialRenderer.h
+source/Irrlicht/CD3D9MaterialRenderer.h
+source/Irrlicht/CD3D9NormalMapRenderer.cpp
+source/Irrlicht/CD3D9NormalMapRenderer.h
+source/Irrlicht/CD3D9ParallaxMapRenderer.cpp
+source/Irrlicht/CD3D9ParallaxMapRenderer.h
+source/Irrlicht/CD3D9ShaderMaterialRenderer.cpp
+source/Irrlicht/CD3D9ShaderMaterialRenderer.h
+source/Irrlicht/CD3D9Texture.cpp
+source/Irrlicht/CD3D9Texture.h
 source/Irrlicht/CAnimatedMeshSceneNode.h
 source/Irrlicht/CAttributeImpl.h
 source/Irrlicht/CAttributes.h
