Update LLVM MinGW toolchain and CMake scripts for ARM64 Windows support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,6 @@ cmake_minimum_required(VERSION 2.8.4)
 project(SuperTuxKart)
 set(PROJECT_VERSION "git")
 
-if (MINGW AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set(LLVM_MINGW TRUE)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -gcodeview")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -gcodeview")
-endif()
-
 add_definitions( -DSUPERTUXKART_VERSION="${PROJECT_VERSION}" )
 
 if(NOT (CMAKE_MAJOR_VERSION VERSION_LESS 3))
@@ -41,7 +35,7 @@ option(USE_SYSTEM_WIIUSE "Use system WiiUse instead of the built-in version, whe
 option(USE_SQLITE3 "Use sqlite to manage server stats and ban list." ON)
 
 CMAKE_DEPENDENT_OPTION(USE_CRYPTO_OPENSSL "Use OpenSSL instead of MbedTLS for cryptography in STK." ON
-    "NOT USE_SWITCH" OFF)
+    "NOT USE_SWITCH;NOT WIN32" OFF)
 CMAKE_DEPENDENT_OPTION(BUILD_RECORDER "Build opengl recorder" ON
     "NOT SERVER_ONLY;NOT APPLE;NOT USE_SWITCH" OFF)
 CMAKE_DEPENDENT_OPTION(USE_SYSTEM_SQUISH "Use system Squish library instead of the built-in version, when available." ON
@@ -125,28 +119,22 @@ set(STK_INSTALL_DATA_DIR "share/supertuxkart" CACHE
     STRING "Install data folder to this directory, absolute or relative to CMAKE_INSTALL_PREFIX")
 
 # Define dependencies path
-if (MSVC OR LLVM_MINGW)
-    set(DEPENDENCIES "dependencies-vs")
-elseif(MINGW)
-    set(DEPENDENCIES "dependencies-mingw")
-else()
-    set(DEPENDENCIES "dependencies")
+string(TOLOWER "${CMAKE_SYSTEM_PROCESSOR}" arch_lower)
+set(BUILD_ARCH "unknown")
+if (CMAKE_GENERATOR_PLATFORM)
+    set(BUILD_ARCH "${CMAKE_GENERATOR_PLATFORM}")
 endif()
-
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(DEPENDENCIES "${DEPENDENCIES}-64bit")
+if(arch_lower MATCHES "arm64" OR arch_lower MATCHES "aarch64" OR ${CMAKE_GENERATOR} MATCHES "(ARM64)" OR ${BUILD_ARCH} MATCHES "(ARM64)")
+    set(DEPENDENCIES "dependencies-win-aarch64")
+elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    set(DEPENDENCIES "dependencies-win-x86_64")
+else()
+    set(DEPENDENCIES "dependencies-win-i686")
 endif()
 
 if(WIN32)
     ADD_DEFINITIONS(-DUNICODE)
     ADD_DEFINITIONS(-D_UNICODE)
-    if(NOT IS_DIRECTORY "${PROJECT_SOURCE_DIR}/${DEPENDENCIES}")
-        set(DEPENDENCIES "dependencies")
-        if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-            set(DEPENDENCIES "${DEPENDENCIES}-64bit")
-        endif()
-    endif()
-
     if(NOT IS_DIRECTORY "${PROJECT_SOURCE_DIR}/${DEPENDENCIES}")
         message(FATAL_ERROR "Dependencies directory not found.")
     endif()
@@ -454,10 +442,6 @@ if(MINGW AND CMAKE_BUILD_TYPE MATCHES Release)
     SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--subsystem,windows")
 endif()
 
-if (LLVM_MINGW)
-    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-pdb=supertuxkart.pdb")
-endif()
-
 if(WIN32)
     # By default windows.h has macros defined for min and max that screw up everything
     add_definitions(-DNOMINMAX)
@@ -580,34 +564,25 @@ endif()
 # CURL and OpenSSL or MbedTLS
 # 1.0.1d for compatible AES GCM handling
 SET(OPENSSL_MINIMUM_VERSION "1.0.1d")
-if (MSVC OR LLVM_MINGW)
+
+find_package(CURL REQUIRED)
+include_directories(${CURL_INCLUDE_DIRS})
+
+find_path(MBEDTLS_INCLUDE_DIRS mbedtls/version.h)
+find_library(MBEDCRYPTO_LIBRARY NAMES mbedcrypto libmbedcrypto)
+
+if (NOT MBEDCRYPTO_LIBRARY OR NOT MBEDTLS_INCLUDE_DIRS OR USE_CRYPTO_OPENSSL)
     set(USE_CRYPTO_OPENSSL ON)
-    target_link_libraries(supertuxkart ${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/lib/libcurl.lib)
-    target_link_libraries(supertuxkart ${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/lib/libeay32.lib)
-elseif(MINGW)
-    set(USE_CRYPTO_OPENSSL ON)
-    target_link_libraries(supertuxkart ${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/lib/libcurl.dll)
-    target_link_libraries(supertuxkart ${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/lib/libeay32.dll)
-else()
-    find_package(CURL REQUIRED)
-    include_directories(${CURL_INCLUDE_DIRS})
+    find_package(OpenSSL REQUIRED)
 
-    find_path(MBEDTLS_INCLUDE_DIRS mbedtls/version.h)
-    find_library(MBEDCRYPTO_LIBRARY NAMES mbedcrypto libmbedcrypto)
-
-    if (NOT MBEDCRYPTO_LIBRARY OR NOT MBEDTLS_INCLUDE_DIRS OR USE_CRYPTO_OPENSSL)
-        set(USE_CRYPTO_OPENSSL ON)
-        find_package(OpenSSL REQUIRED)
-
-        if(${OPENSSL_VERSION} VERSION_LESS ${OPENSSL_MINIMUM_VERSION} OR
-            (${OPENSSL_VERSION} VERSION_EQUAL ${OPENSSL_MINIMUM_VERSION} AND ${OPENSSL_VERSION} STRLESS ${OPENSSL_MINIMUM_VERSION}))
-            message(FATAL_ERROR "OpenSSL version found (${OPENSSL_VERSION}) is less then the minimum required (${OPENSSL_MINIMUM_VERSION}), aborting.")
-        endif()
-        include_directories(${OpenSSL_INCLUDE_DIRS})
-    else()
-        set(USE_CRYPTO_OPENSSL OFF)
-        include_directories(${MBEDTLS_INCLUDE_DIRS})
+    if(${OPENSSL_VERSION} VERSION_LESS ${OPENSSL_MINIMUM_VERSION} OR
+        (${OPENSSL_VERSION} VERSION_EQUAL ${OPENSSL_MINIMUM_VERSION} AND ${OPENSSL_VERSION} STRLESS ${OPENSSL_MINIMUM_VERSION}))
+        message(FATAL_ERROR "OpenSSL version found (${OPENSSL_VERSION}) is less then the minimum required (${OPENSSL_MINIMUM_VERSION}), aborting.")
     endif()
+    include_directories(${OpenSSL_INCLUDE_DIRS})
+else()
+    set(USE_CRYPTO_OPENSSL OFF)
+    include_directories(${MBEDTLS_INCLUDE_DIRS})
 endif()
 
 if (USE_CRYPTO_OPENSSL)
@@ -739,7 +714,7 @@ if(MSVC OR MINGW)
   target_link_libraries(supertuxkart iphlpapi.lib)
   add_custom_command(TARGET supertuxkart POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/dll"
+        "${PROJECT_SOURCE_DIR}/${DEPENDENCIES}/bin"
         $<TARGET_FILE_DIR:supertuxkart>)
   add_custom_target(stkshaders SOURCES ${STK_SHADERS})
 endif()
@@ -749,28 +724,17 @@ if(MINGW)
     if (NOT CMAKE_BUILD_TYPE MATCHES Debug)
         target_link_libraries(supertuxkart -mwindows)
     endif()
-    if (LLVM_MINGW)
-        find_library(LIBCPP NAMES "libc++.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
-        if (LIBCPP)
-            file(COPY ${LIBCPP} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
-        endif()
-        find_library(LIBUNWIND NAMES "libunwind.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
-        if (LIBUNWIND)
-            file(COPY ${LIBUNWIND} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
-        endif()
-    else()
-        find_library(LIBGCC NAMES "libgcc_s_dw2-1.dll" "libgcc_s_sjlj-1.dll" "libgcc_s_seh-1.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
-        if (LIBGCC)
-            file(COPY ${LIBGCC} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
-        endif()
-        find_library(LIBSTDCPP NAMES "libstdc++-6.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
-        if (LIBSTDCPP)
-            file(COPY ${LIBSTDCPP} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
-        endif()
-        find_library(LIBPTHREAD NAMES "winpthread-1.dll" "libwinpthread-1.dll" "pthreadGC2.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
-        if(LIBPTHREAD)
-            file(COPY ${LIBPTHREAD} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
-        endif()
+    find_library(LIBGCC NAMES "libgcc_s_dw2-1.dll" "libgcc_s_sjlj-1.dll" "libgcc_s_seh-1.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
+    if (LIBGCC)
+        file(COPY ${LIBGCC} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
+    endif()
+    find_library(LIBSTDCPP NAMES "libstdc++-6.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
+    if (LIBSTDCPP)
+        file(COPY ${LIBSTDCPP} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
+    endif()
+    find_library(LIBPTHREAD NAMES "winpthread-1.dll" "libwinpthread-1.dll" "pthreadGC2.dll" PATHS ${CMAKE_FIND_ROOT_PATH})
+    if(LIBPTHREAD)
+        file(COPY ${LIBPTHREAD} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
     endif()
 endif()
 
@@ -838,9 +802,4 @@ install(FILES data/supertuxkart.appdata.xml DESTINATION share/metainfo)
 if(MINGW)
     install(DIRECTORY ${CMAKE_BINARY_DIR}/bin/ DESTINATION ${STK_INSTALL_BINARY_DIR}
             FILES_MATCHING PATTERN "*.dll")
-endif()
-
-if (LLVM_MINGW)
-    set(COPY_PDB_CMD cp ${CMAKE_BINARY_DIR}/supertuxkart.pdb ${CMAKE_BINARY_DIR}/bin)
-    add_custom_command(TARGET supertuxkart POST_BUILD COMMAND ${COPY_PDB_CMD})
 endif()
