Update translation source, AppData and Desktop file

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -69,6 +69,7 @@ Keywords[ru]=такс;игра;гонка;
 Keywords[sr]=такс;игра;трка;тукс;игрица;
 Keywords[sv]=tux;spel;tävla;
 Keywords[tr]=tux;oyun;yarış;
+Keywords[uk]=пінгвін;гра;перегони;
 Keywords[zh_CN]=企鹅、游戏、赛车
 Keywords[zh_HK]=tux;game;race;
 Keywords[zh_TW]=tux;game;race;
