Use libsamplerate to handle pitch for MojoAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,6 +370,15 @@ endif()
 if(NOT SERVER_ONLY)
     # OpenAL
     if (USE_MOJOAL)
+        find_library(LIBSAMPLERATE_LIBRARY NAMES samplerate libsamplerate)
+        find_path(LIBSAMPLERATE_INCLUDEDIR NAMES samplerate.h PATHS)
+        if (NOT LIBSAMPLERATE_LIBRARY OR NOT LIBSAMPLERATE_INCLUDEDIR)
+            message(FATAL_ERROR "libsamplerate not found. "
+                "libsamplerate is required to handle pitch for MojoAL.")
+        else()
+            include_directories("${LIBSAMPLERATE_INCLUDEDIR}")
+            MESSAGE(STATUS "Use system libsamplerate: ${LIBSAMPLERATE_LIBRARY}")
+        endif()
         add_definitions(-DAL_LIBTYPE_STATIC)
         add_subdirectory("${PROJECT_SOURCE_DIR}/lib/mojoal")
         include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/mojoal")
@@ -642,7 +651,7 @@ endif()
 
 if(NOT SERVER_ONLY)
     if (USE_MOJOAL)
-        target_link_libraries(supertuxkart mojoal)
+        target_link_libraries(supertuxkart mojoal ${LIBSAMPLERATE_LIBRARY})
     else()
         target_link_libraries(supertuxkart ${OPENAL_LIBRARY})
     endif()
